--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Werkzeug==3.1.4
 flask-sqlalchemy==3.1.1
 python-dotenv==1.0.0
 google-generativeai==0.8.3
+psycopg2-binary==2.9.9
 flake8==7.1.0
 black==24.4.2
 pytest==8.3.2
