--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ flask-sqlalchemy==3.1.1
 python-dotenv==1.0.0
 google-generativeai==0.8.3
 psycopg2-binary==2.9.9
+gunicorn==21.2.0
 flake8==7.1.0
 black==24.4.2
 pytest==8.3.2
