--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-app = "gutter-tracker"
+app = "gutter-tracker-app"
 primary_region = "iad"
 
 [build]
@@ -16,6 +16,6 @@ primary_region = "iad"
   processes = ["app"]
 
 [[vm]]
-  memory = "256mb"
+  memory = "512mb"
   cpu_kind = "shared"
   cpus = 1
